added a href which links the index.html main page and the hardboiledEggs.html together

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 
     <body>
         <h1> Odin Recipes </h1>
+        <h3> Best Back To School Recipes </h3>
+        <a href="recipes/hardboiledEggs.html>">hardBoil Eggs</a>
     </body>
 </html>
