--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <body>
         <h1> Odin Recipes </h1>
         <h3> Best Back To School Recipes </h3>
-        <a href="recipes/hardboiledEggs.html>">hardBoil Eggs</a>
+        <a href="recipes/hardboiledEggs.html">Hard-Boiled Eggs</a>
     </body>
 </html>
