just added another footer to the home of the website with the p tag saying my name and a naruto quote that says Believe it!

--- a/index.html
+++ b/index.html
@@ -11,4 +11,10 @@
         <h3> Best Back To School Recipes </h3>
         <a href="recipes/hardboiledEggs.html">Hard-Boiled Eggs</a>
     </body>
+
+
+    <footer>
+        <p> Created by Talib Paul/Folborg.</p>
+        <p> Believe it! </p>
+    </footer>
 </html>
