Quick update no time to say

--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     </head>
 
     <body>
-        <h1> Odin Recipes </h1>
-        <h3> Best Back To School Recipes </h3>
-        <a href="recipes/hardboiledEggs.html">Hard-Boiled Eggs</a>
+        
+        <header>
+            <h1> Odin Recipes </h1>
+        </header>
+
+        <nav>
+            <h3> Best Back To School Recipes </h3>
+            <a href="recipes/hardboiledEggs.html">Hard-Boiled Eggs</a>
+        </nav>
+
+        <main>
+
+        </main>
+
     </body>
 
 
