--- a/recipes/hardboiledEggs.html
+++ b/recipes/hardboiledEggs.html
@@ -27,7 +27,10 @@
                 <li>12 Eggs</li>
             </ul>
             
+            <h2> <bold> Directions </bold> </h2>
+            
             <h4> <bold>Step 1</bold> </h4>
+
             <article>
                 <p>Place eggs in a pot; pour enough water over the eggs to cover. Cover and turn stove to high; bring to a boil; turn off heat and place pot on a cool burner. Let the pot sit with the cover on for 15 minutes. Meanwhile, fill a large bowl halfway with cold water; transfer the eggs from the pot to the cold water. Replace the water with cold water as needed to keep cold until the eggs are completely cooled. Chill in refrigerator at least 2 hours before peeling. </p>
             </article>
