--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     </head>
 
     <body>
-        
+
         <header>
             <h1> Odin Recipes </h1>
         </header>
 
         <nav>
             <h3> Best Back To School Recipes </h3>
-            <a href="recipes/hardboiledEggs.html">Hard-Boiled Eggs</a>
+
+            <ul>
+                <li><a href="recipes/hardboiledEggs.html">Hard-Boiled Eggs</a></li>
+                <li><a href="recipes/becSandwich.html">Bacon, Egg, and Cheese Sandwich</a></li>
+            </ul>
+            
         </nav>
 
         <main>
